Update README.md
Added usage